fix list spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,7 +16,6 @@ body {
     font-family: $font-stack;
 }
 
-
 #container {
     display: flex;
     flex-direction: column;
@@ -41,8 +40,8 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        flex-grow:1;
-        flex-shrink:1;
+        flex-grow: 1;
+        flex-shrink: 1;
     }
 
     .options {
@@ -63,13 +62,10 @@ body {
                 font-family: $font-stack;
                 color: $primary-color;
 
-
                 &::after {
                     border-bottom: 2px solid $primary-color;
-
                 }
             }
-
         }
     }
     .list {
@@ -81,26 +77,33 @@ body {
         .--list-row {
             display: flex;
             flex-direction: column;
-            flex-grow:1;
-            flex-shrink:1;
             .--list-item {
                 width: 100%;
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
+                flex-grow: 1;
                 justify-content: space-between;
                 align-items: center;
                 transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1)
                     0ms;
-                .--list-item-time {
-                    width: 20vh;
+                .--list-item-times {
+                    display:flex;
+                    flex-direction:row;
+                    flex-wrap:nowrap;
+                    width:100%;
+                    justify-content: space-between; 
 
-                    svg.MuiSvgIcon-root {
-                        path {
-                            color: $primary-color;
-                            d: path(
-                                "M 11.99 2 C 6.47 2 2 6.48 2 12 s 4.47 10 9.99 10 C 17.52 22 22 17.52 22 12 S 17.52 2 11.99 2 Z M 12 20 c -4.42 0 -8 -3.58 -8 -8 s 3.58 -8 8 -8 s 8 3.58 8 8 s -3.58 8 -8 8 Z M 12.5 7 H 11 v 6 l 5.25 3.15 l 0.75 -1.23 l -4.5 -2.67 Z"
-                            );
+                    .--list-item-time {
+                        width: 45%;
+
+                        svg.MuiSvgIcon-root {
+                            path {
+                                color: $primary-color;
+                                d: path(
+                                    "M 11.99 2 C 6.47 2 2 6.48 2 12 s 4.47 10 9.99 10 C 17.52 22 22 17.52 22 12 S 17.52 2 11.99 2 Z M 12 20 c -4.42 0 -8 -3.58 -8 -8 s 3.58 -8 8 -8 s 8 3.58 8 8 s -3.58 8 -8 8 Z M 12.5 7 H 11 v 6 l 5.25 3.15 l 0.75 -1.23 l -4.5 -2.67 Z"
+                                );
+                            }
                         }
                     }
                 }
@@ -160,13 +163,13 @@ body {
 }
 
 .MuiPickersToolbar-toolbar {
-    background-color:$primary-color !important;
+    background-color: $primary-color !important;
 }
 .MuiButton-root {
     font-family: $font-text !important;
 }
 
-.MuiPickersClock-pin{
+.MuiPickersClock-pin {
     background-color: $primary-color !important;
 }
 
